force-app/main/default/objects/MUSW__Login_UserInfo__c/MUSW__Login_UserInfo__c.object-meta.xml
<CustomObject>
    <description>Stores temporary user credentials</description>
    <label>Login User Info</label>
    <nameField>
        <label>userName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login_UsersInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>