force-app/main/default/objects/MUSW__Login_UserInfo__c/fields/MUSW__Email__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>